parent classes for horizontal facing/generic waterloggable and unfired blocks, model and texture for ingot cast, added drop recipes